# wx-hello

./: CMakeLists.txt  MacOSXBundleInfo.plist.in  main.cpp
include/: myapp.h  myframe.h
src/: myapp.cpp  myframe.cpp
